@@ -1091,6 +1091,7 @@ CMPIStatus InteropProviderInvokeMethod(
 	CMPIArgs * out)
 { 
    CMPIStatus st = { CMPI_RC_OK, NULL };
+   CMPIStatus fn_st = { CMPI_RC_ERR_FAILED, NULL};
    
    _SFCB_ENTER(TRACE_INDPROVIDER, "InteropProviderInvokeMethod");
    
@@ -1102,6 +1103,7 @@ CMPIStatus InteropProviderInvokeMethod(
       HashTableIterator *i;
       Subscription *su;
       char *suName;
+      char *filtername = NULL;
       CMPIArgs *hin=CMNewArgs(_broker,NULL);
       CMPIInstance *ind=CMGetArg(in,"indication",NULL).value.inst;
       void *filterId=(void*)CMGetArg(in,"filterid",NULL).value.
@@ -1112,6 +1114,18 @@ CMPIStatus InteropProviderInvokeMethod(
 #endif
       char *ns=(char*)CMGetArg(in,"namespace",NULL).value.string->hdl;
       
+      // Add indicationFilterName to the indication
+      Filter *filter = filterId;
+      CMPIData cd_name = CMGetProperty(filter->fci, "name", &fn_st);
+      if (fn_st.rc == CMPI_RC_OK) {
+        filtername = cd_name.value.string->hdl;
+        _SFCB_TRACE(1,("--- %s: filter=%p, filter->sns=%s, filter->name=%s, filter namespace: %s", __FUNCTION__, filter, filter->sns, filtername, ns));
+        fn_st = CMSetProperty(ind, "IndicationFilterName", filtername, CMPI_chars);
+        if (fn_st.rc != CMPI_RC_OK) {
+            _SFCB_TRACE(1,("--- %s: failed to add IndicationFilterName = %s rc=%d", __FUNCTION__, filtername, fn_st.rc));
+        }
+      }
+
       CMAddArg(hin,"indication",&ind,CMPI_instance);
       CMAddArg(hin,"nameSpace",ns,CMPI_chars);
       
