@@ -20,6 +20,7 @@ Bugs fixed:
 - 2952628 Handler is not removed from interop-Hashtable when CI fails
 - 3017845 disableIndications not called on provider shutdown
 - 3010272 Indication providers always unloaded when idle
+- 3003509 sfcb must configure IndicationFilterName
 
 Changes in 1.3.8
 ================
