@@ -1,3 +1,8 @@
+2010-07-08 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
+	* interopProvider.c
+	[ 3003509 ] sfcb must configure IndicationFilterName 
+	(based on patch by sto)
+
 2010-07-06  Chris Buccella  <buccella@linux.vnet.ibm.com>
 
 	* providerDrv.c:
